[package]
name = "mikaboshi"
version = "0.2.0"
edition = "2018"

[dependencies]
# env_logger = "0.8.4"
lazy_static = "1.4.0"
# log = "0.4.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.75"
sowngwala = { git = "https://github.com/minagawah/sowngwala", version = "0.4.0" }

[dev-dependencies]
approx_eq = "0.1.8"
