[package]
name = "mikaboshi"
version = "0.7.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
# env_logger = "0.8.4"
lazy_static = "1.4.0"
# log = "0.4.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.75"
sowngwala = { git = "https://github.com/minagawah/sowngwala", version = "0.6.0" }

[dev-dependencies]
approx_eq = "0.1.8"
js-sys = "0.3.52"
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3.13"
